compiler/tests/checks/types.out
compiler/tests/checks/types.foxil:4:1: error: recursion detected in field 1 of type `@Recursive`
     4 | @Recursive = type {
       | ^^^^^^^^^^
       = help: use a pointer instead
