compiler/tests/checks/types.foxil
@AliasToUnknown = type @Unknown
@AliasToSelf = type @AliasToSelf

@Recursive = type {
    @Recursive
}

@FastAlias = type { i32 }

@Zero = type {}

func @main() void {
    %q = alloca { i32, bool }, { i32, bool } { i32 5, bool true, char 'A' }
    %q2 = alloca { bool }, { bool } { i32 5, bool true, char 'A' }
    
    %f = alloca @FastAlias, @FastAlias { i32 4 }
    %f2 = alloca @FastAlias, @FastAlias { }
    
    %z = alloca @Zero, @Zero {i32 0}
    ret void
}
